--- a/src/app/components/bloc-detail/bloc-detail.component.html
+++ b/src/app/components/bloc-detail/bloc-detail.component.html
@@ -1,6 +1,6 @@
 <h2>Bloc Details</h2>
 <div *ngIf="bloc">
-  <p>ID: {{ bloc.id }}</p>
-  <p>Name: {{ bloc.name }}</p>
-  <p>Capacity: {{ bloc.capacity }}</p>
+  <p>ID: {{ bloc.idBloc }}</p>
+  <p>Name: {{ bloc.nomBloc }}</p>
+  <p>Capacity: {{ bloc.capaciteBloc }}</p>
 </div>
